Aggiunti tutti i tipi di moneta

--- a/src/main/resources/assets/auxence_addons/lang/it_it.json
+++ b/src/main/resources/assets/auxence_addons/lang/it_it.json
@@ -2,9 +2,11 @@
   "entity.auxence_addons.guardia": "Guardia",
   "itemGroup.auxence_addons.npc": "NPC",
   "item.auxence_addons.coiniron": "Moneta di ferro",
+  "item.auxence_addons.coinemerald": "Copper coin",
   "item.auxence_addons.gom_gom": "Gom Gom",
   "npc.msg.jack": "benvenuto/a in Auxence!",
   "item.auxence_addons.golemdiroccia_spawn_egg": "Golem di Roccia Spawn Egg",
+  "item.auxence_addons.coingold": "Copper coin",
   "item.auxence_addons.jacksparrow_spawn_egg": "Jacksparrow Spawn Egg",
   "entity.auxence_addons.jacksparrow": "Jacksparrow",
   "entity.auxence_addons.vendor": "Vendor",
@@ -15,5 +17,6 @@
   "item.auxence_addons.guardia_spawn_egg": "Uovo di Guardia",
   "entity.auxence_addons.golemdiroccia": "Golem di Roccia",
   "itemGroup.auxence_addons.auxence_itemtab": "Oggetti Auxence",
-  "item.auxence_addons.coincopper": "Moneta di Rame"
+  "item.auxence_addons.coincopper": "Moneta di Rame",
+  "item.auxence_addons.coindiamond": "Copper coin"
 }
