--- a/src/main/resources/assets/auxence_addons/lang/en_us.json
+++ b/src/main/resources/assets/auxence_addons/lang/en_us.json
@@ -2,9 +2,11 @@
   "entity.auxence_addons.guardia": "Guardia",
   "itemGroup.auxence_addons.npc": "NPC",
   "item.auxence_addons.coiniron": "Iron coin",
+  "item.auxence_addons.coinemerald": "Emerald Coin",
   "item.auxence_addons.gom_gom": "Gom Gom",
   "npc.msg.jack": "welcome in Auxence!",
   "item.auxence_addons.golemdiroccia_spawn_egg": "Golem di Roccia Spawn Egg",
+  "item.auxence_addons.coingold": "Copper coin",
   "item.auxence_addons.jacksparrow_spawn_egg": "Jacksparrow Spawn Egg",
   "entity.auxence_addons.jacksparrow": "Jacksparrow",
   "entity.auxence_addons.vendor": "Vendor",
@@ -15,5 +17,6 @@
   "item.auxence_addons.guardia_spawn_egg": "Guardia Spawn Egg",
   "entity.auxence_addons.golemdiroccia": "Golem di Roccia",
   "itemGroup.auxence_addons.auxence_itemtab": "Auxence Item",
-  "item.auxence_addons.coincopper": "Copper coin"
+  "item.auxence_addons.coincopper": "Copper coin",
+  "item.auxence_addons.coindiamond": "Copper coin"
 }
