--- a/src/main/resources/assets/auxence_addons/lang/it_it.json
+++ b/src/main/resources/assets/auxence_addons/lang/it_it.json
@@ -9,9 +9,11 @@
   "item.auxence_addons.coingold": "Copper coin",
   "item.auxence_addons.jacksparrow_spawn_egg": "Jacksparrow Spawn Egg",
   "entity.auxence_addons.jacksparrow": "Jacksparrow",
+  "item.auxence_addons.heroshieldblock": "Hero shield",
   "entity.auxence_addons.vendor": "Vendor",
   "advancements.redei_pirati.descr": "Hai trovato il Frutto del Mare Gom Gom",
   "advancements.redei_pirati.title": "Diventerò il Re dei Pirati",
+  "item.auxence_addons.heroshield": "Hero shield",
   "item.auxence_addons.vendor_spawn_egg": "Vendor Spawn Egg",
   "itemGroup.auxence_addons.auxence_mobtab": "Auxence Mob",
   "item.auxence_addons.guardia_spawn_egg": "Uovo di Guardia",
