--- a/src/main/resources/assets/auxence_addons/lang/it_it.json
+++ b/src/main/resources/assets/auxence_addons/lang/it_it.json
@@ -2,23 +2,25 @@
   "entity.auxence_addons.guardia": "Guardia",
   "itemGroup.auxence_addons.npc": "NPC",
   "item.auxence_addons.coiniron": "Moneta di ferro",
-  "item.auxence_addons.coinemerald": "Copper coin",
-  "item.auxence_addons.gom_gom": "Gom Gom",
   "npc.msg.jack": "benvenuto/a in Auxence!",
-  "item.auxence_addons.golemdiroccia_spawn_egg": "Golem di Roccia Spawn Egg",
-  "item.auxence_addons.coingold": "Copper coin",
+  "item.auxence_addons.golemdiroccia_spawn_egg": "Uovo di Golem di Roccia",
   "item.auxence_addons.jacksparrow_spawn_egg": "Jacksparrow Spawn Egg",
   "entity.auxence_addons.jacksparrow": "Jacksparrow",
+  "entity.auxence_addons.vendor": "Venditore",
+  "entity.auxence_addons.capimario": "Mario",
+  "itemGroup.auxence_addons.auxence_mobtab": "Auxence Mob",
+  "item.auxence_addons.guardia_spawn_egg": "Uovo di Guardia",
+  "item.auxence_addons.capimario_spawn_egg": "Mario Spawn Egg",
+  "entity.auxence_addons.golemdiroccia": "Golem di Roccia",
+  "itemGroup.auxence_addons.auxence_itemtab": "Oggetti Auxence",
+  "item.auxence_addons.coindiamond": "Moneta di Diamante",
+  "item.auxence_addons.coinemerald": "Moneta di smeraldo",
+  "item.auxence_addons.gom_gom": "Gom Gom",
+  "item.auxence_addons.coingold": "Moneta d\u0027\u0027oro",
   "item.auxence_addons.heroshieldblock": "Hero shield",
-  "entity.auxence_addons.vendor": "Vendor",
   "advancements.redei_pirati.descr": "Hai trovato il Frutto del Mare Gom Gom",
   "advancements.redei_pirati.title": "Diventerò il Re dei Pirati",
   "item.auxence_addons.heroshield": "Hero shield",
-  "item.auxence_addons.vendor_spawn_egg": "Vendor Spawn Egg",
-  "itemGroup.auxence_addons.auxence_mobtab": "Auxence Mob",
-  "item.auxence_addons.guardia_spawn_egg": "Uovo di Guardia",
-  "entity.auxence_addons.golemdiroccia": "Golem di Roccia",
-  "itemGroup.auxence_addons.auxence_itemtab": "Oggetti Auxence",
-  "item.auxence_addons.coincopper": "Moneta di Rame",
-  "item.auxence_addons.coindiamond": "Copper coin"
+  "item.auxence_addons.vendor_spawn_egg": "Uovo di Venditore",
+  "item.auxence_addons.coincopper": "Moneta di Rame"
 }
