--- a/src/main/resources/assets/auxence_addons/lang/en_us.json
+++ b/src/main/resources/assets/auxence_addons/lang/en_us.json
@@ -2,23 +2,25 @@
   "entity.auxence_addons.guardia": "Guardia",
   "itemGroup.auxence_addons.npc": "NPC",
   "item.auxence_addons.coiniron": "Iron coin",
-  "item.auxence_addons.coinemerald": "Emerald Coin",
-  "item.auxence_addons.gom_gom": "Gom Gom",
   "npc.msg.jack": "welcome in Auxence!",
   "item.auxence_addons.golemdiroccia_spawn_egg": "Golem di Roccia Spawn Egg",
-  "item.auxence_addons.coingold": "Copper coin",
   "item.auxence_addons.jacksparrow_spawn_egg": "Jacksparrow Spawn Egg",
   "entity.auxence_addons.jacksparrow": "Jacksparrow",
-  "item.auxence_addons.heroshieldblock": "Hero shield",
   "entity.auxence_addons.vendor": "Vendor",
+  "entity.auxence_addons.capimario": "Mario",
+  "itemGroup.auxence_addons.auxence_mobtab": "Auxence Mob",
+  "item.auxence_addons.guardia_spawn_egg": "Guardia Spawn Egg",
+  "item.auxence_addons.capimario_spawn_egg": "Mario Spawn Egg",
+  "entity.auxence_addons.golemdiroccia": "Golem di Roccia",
+  "itemGroup.auxence_addons.auxence_itemtab": "Auxence Item",
+  "item.auxence_addons.coindiamond": "Copper coin",
+  "item.auxence_addons.coinemerald": "Emerald Coin",
+  "item.auxence_addons.gom_gom": "Gom Gom",
+  "item.auxence_addons.coingold": "Copper coin",
+  "item.auxence_addons.heroshieldblock": "Hero shield",
   "advancements.redei_pirati.descr": "Hai trovato il Frutto del Mare Gom Gom",
   "advancements.redei_pirati.title": "Diventerò il Re dei Pirati",
   "item.auxence_addons.heroshield": "Hero shield",
   "item.auxence_addons.vendor_spawn_egg": "Vendor Spawn Egg",
-  "itemGroup.auxence_addons.auxence_mobtab": "Auxence Mob",
-  "item.auxence_addons.guardia_spawn_egg": "Guardia Spawn Egg",
-  "entity.auxence_addons.golemdiroccia": "Golem di Roccia",
-  "itemGroup.auxence_addons.auxence_itemtab": "Auxence Item",
-  "item.auxence_addons.coincopper": "Copper coin",
-  "item.auxence_addons.coindiamond": "Copper coin"
+  "item.auxence_addons.coincopper": "Copper coin"
 }
