Sistemato lo scudo e aggiunto comando discord

--- a/src/main/resources/assets/auxence_addons/lang/it_it.json
+++ b/src/main/resources/assets/auxence_addons/lang/it_it.json
@@ -2,6 +2,7 @@
   "entity.auxence_addons.guardia": "Guardia",
   "itemGroup.auxence_addons.npc": "NPC",
   "item.auxence_addons.coiniron": "Moneta di ferro",
+  "entity.auxence_addons.capi_noiz": "Noiz87",
   "npc.msg.jack": "benvenuto/a in Auxence!",
   "item.auxence_addons.golemdiroccia_spawn_egg": "Uovo di Golem di Roccia",
   "item.auxence_addons.jacksparrow_spawn_egg": "Jacksparrow Spawn Egg",
@@ -12,15 +13,17 @@
   "item.auxence_addons.guardia_spawn_egg": "Uovo di Guardia",
   "item.auxence_addons.capimario_spawn_egg": "Mario Spawn Egg",
   "entity.auxence_addons.golemdiroccia": "Golem di Roccia",
+  "item.auxence_addons.hero_shield_block": "Scudo dell\u0027eroe",
   "itemGroup.auxence_addons.auxence_itemtab": "Oggetti Auxence",
-  "item.auxence_addons.coindiamond": "Moneta di Diamante",
+  "item.auxence_addons.coindiamond": "Moneta di diamante",
   "item.auxence_addons.coinemerald": "Moneta di smeraldo",
   "item.auxence_addons.gom_gom": "Gom Gom",
   "item.auxence_addons.coingold": "Moneta d\u0027\u0027oro",
-  "item.auxence_addons.heroshieldblock": "Hero shield",
   "advancements.redei_pirati.descr": "Hai trovato il Frutto del Mare Gom Gom",
   "advancements.redei_pirati.title": "Diventerò il Re dei Pirati",
-  "item.auxence_addons.heroshield": "Hero shield",
-  "item.auxence_addons.vendor_spawn_egg": "Uovo di Venditore",
+  "item.auxence_addons.heroshield": "Scudo dell\u0027eroe",
+  "block.auxence_addons.guardblock": "Guardblock",
+  "item.auxence_addons.vendor_spawn_egg": "Uovo di venditore",
+  "item.auxence_addons.capi_noiz_spawn_egg": "Noiz87 Spawn Egg",
   "item.auxence_addons.coincopper": "Moneta di Rame"
 }
